--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		/>
 		<link rel="stylesheet" href="css/normalize.css" />
 		<link rel="stylesheet" href="css/style.css" />
+		<script src="./js/auth.js" defer></script>
+		<script src="./js/partners.js" defer></script>
 	</head>
 
 	<body>
@@ -346,6 +348,5 @@
 			</div>
 			<!-- /.modal-dialog -->
 		</div>
-		<script src="./js/main.js"></script>
 	</body>
 </html>
